--- a/app/src/main/res/layout/fragment_audio.xml
+++ b/app/src/main/res/layout/fragment_audio.xml
@@ -34,6 +34,7 @@
             android:id="@+id/audio_container"
             android:layout_width="match_parent"
             android:background="@color/white"
+            android:layout_marginBottom="60dp"
             android:layout_height="match_parent"
             android:orientation="vertical" >
         </android.support.v7.widget.RecyclerView>
